--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,10 @@
     --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 * {
     margin: 0;
     padding: 0;
