--- a/public/css/styleAdmHome.css
+++ b/public/css/styleAdmHome.css
@@ -20,8 +20,9 @@ a.active {
 }
 
 nav{
-  background: #065590;
-  color: white;
+  background: white;
+  color: black;
+  box-shadow: 3px 3px .5px grey;
 }
 
 nav::after{
@@ -55,7 +56,7 @@ nav ul li{
 }
 
 nav ul li a{
-  color: white;
+  color: black;
   text-decoration: none;
   line-height: 70px;
   font-size: 18px;
@@ -277,18 +278,14 @@ section{
   padding: 10px 28px;
   font-size: 16px;
   cursor: pointer;
-  background-color: #065590;
+  background-color: #e62f3a;
   border-radius: 10px 10px;
 }
 
 .button:hover{
-  background-color: black;
+  background-color: #e66b72;
   border-radius: 10px 10px;
   transition: 0.3s ease;
-}
-
-.button a:hover{
-  color: #065590;
 }
 
 .button a{
