--- a/public/css/styleAdmHome.css
+++ b/public/css/styleAdmHome.css
@@ -192,7 +192,7 @@ nav ul ul ul li{
 
   .icon{
     display: block;
-    color: white;
+    color: black;
     position: absolute;
     right: 40px;
     line-height: 70px;
